// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`./RegistrationPage.js should match TPA provider snapshot 1`] = `
<div
  className="register-container mx-auto"
>
  <div
    className="text-left"
  >
    <span>
      Already have an edX account?
    </span>
    <a
      href="/login"
    >
       Sign in.
    </a>
  </div>
  <div
    className="d-block mb-4 mt-4"
  >
    <span
      className="d-block mx-auto mb-4 section-heading-line"
    >
      Create an account using
    </span>
    <div
      className="row tpa-container"
    >
      <button
        className="btn-social btn-oa2-apple-id"
        id="oa2-apple-id"
        onClick={[Function]}
        type="button"
      >
        <div
          aria-hidden="true"
        >
          <img
            alt="icon Apple"
            className="icon-image"
            src="https://edx.devstack.lms/logo.png"
          />
        </div>
        <span
          aria-hidden="true"
          className="pl-2"
        >
          Apple
        </span>
      </button>
    </div>
    <span
      className="d-block mx-auto text-center mt-4 section-heading-line"
    >
      or create a new one here
    </span>
  </div>
  <form
    className="mb-4 mx-auto form-group"
  >
    <div
      className="form-group"
    >
      <label
        className="h6 pt-3"
        htmlFor="name"
      >
        Full Name (required)
      </label>
      <input
        aria-describedby=""
        className="form-control"
        id="name"
        name="name"
        onChange={[Function]}
        placeholder=""
        required={true}
        type="text"
        value=""
      />
      <strong
        className="invalid-feedback"
        id="name-invalid-feedback"
      >
        Enter your full name.
      </strong>
    </div>
    <div
      className="form-group"
    >
      <label
        className="h6 pt-3"
        htmlFor="username"
      >
        Public Username (required)
      </label>
      <input
        aria-describedby=""
        className="form-control"
        id="username"
        name="username"
        onChange={[Function]}
        placeholder=""
        required={true}
        type="text"
        value=""
      />
      <strong
        className="invalid-feedback"
        id="username-invalid-feedback"
      >
        Username must be between 2 and 30 characters long.
      </strong>
    </div>
    <div
      className="form-group"
    >
      <label
        className="h6 pt-3"
        htmlFor="email"
      >
        Email (required)
      </label>
      <input
        aria-describedby=""
        className="form-control"
        id="email"
        name="email"
        onChange={[Function]}
        placeholder=""
        required={true}
        type="email"
        value=""
      />
      <strong
        className="invalid-feedback"
        id="email-invalid-feedback"
      >
        Enter a valid email address that contains at least 3 characters.
      </strong>
    </div>
    <div
      className="form-group"
    >
      <label
        className="h6 pt-3"
        htmlFor="password"
      >
        Password (required)
      </label>
      <input
        aria-describedby=""
        className="form-control"
        id="password"
        name="password"
        onChange={[Function]}
        placeholder=""
        required={true}
        type="password"
        value=""
      />
      <strong
        className="invalid-feedback"
        id="password-invalid-feedback"
      >
        This password is too short. It must contain at least 8 characters. This password must contain at least 1 number.
      </strong>
    </div>
    <div
      className="form-group custom-control"
    >
      <input
        aria-describedby=""
        checked={false}
        className="form-check-input"
        id="optional"
        name="optional"
        onChange={[Function]}
        required={true}
        type="checkbox"
        value={false}
      />
      <p
        id="additionalFields"
        onClick={[Function]}
        role="presentation"
      >
        Support education research by providing additional information
      </p>
    </div>
    <button
      aria-disabled={false}
      aria-live="assertive"
      className="pgn__stateful-btn pgn__stateful-btn-state-default btn-primary submit mt-4 btn btn-primary"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      <span
        className="d-flex align-items-center justify-content-center"
      >
        Create Account
      </span>
    </button>
  </form>
</div>
`;

exports[`./RegistrationPage.js should match default section snapshot 1`] = `
<div
  className="register-container mx-auto"
>
  <div
    className="text-left"
  >
    <span>
      Already have an edX account?
    </span>
    <a
      href="/login"
    >
       Sign in.
    </a>
  </div>
  <form
    className="mb-4 mx-auto form-group"
  >
    <div
      className="form-group"
    >
      <label
        className="h6 pt-3"
        htmlFor="name"
      >
        Full Name (required)
      </label>
      <input
        aria-describedby=""
        className="form-control"
        id="name"
        name="name"
        onChange={[Function]}
        placeholder=""
        required={true}
        type="text"
        value=""
      />
      <strong
        className="invalid-feedback"
        id="name-invalid-feedback"
      >
        Enter your full name.
      </strong>
    </div>
    <div
      className="form-group"
    >
      <label
        className="h6 pt-3"
        htmlFor="username"
      >
        Public Username (required)
      </label>
      <input
        aria-describedby=""
        className="form-control"
        id="username"
        name="username"
        onChange={[Function]}
        placeholder=""
        required={true}
        type="text"
        value=""
      />
      <strong
        className="invalid-feedback"
        id="username-invalid-feedback"
      >
        Username must be between 2 and 30 characters long.
      </strong>
    </div>
    <div
      className="form-group"
    >
      <label
        className="h6 pt-3"
        htmlFor="email"
      >
        Email (required)
      </label>
      <input
        aria-describedby=""
        className="form-control"
        id="email"
        name="email"
        onChange={[Function]}
        placeholder=""
        required={true}
        type="email"
        value=""
      />
      <strong
        className="invalid-feedback"
        id="email-invalid-feedback"
      >
        Enter a valid email address that contains at least 3 characters.
      </strong>
    </div>
    <div
      className="form-group"
    >
      <label
        className="h6 pt-3"
        htmlFor="password"
      >
        Password (required)
      </label>
      <input
        aria-describedby=""
        className="form-control"
        id="password"
        name="password"
        onChange={[Function]}
        placeholder=""
        required={true}
        type="password"
        value=""
      />
      <strong
        className="invalid-feedback"
        id="password-invalid-feedback"
      >
        This password is too short. It must contain at least 8 characters. This password must contain at least 1 number.
      </strong>
    </div>
    <div
      className="form-group custom-control"
    >
      <input
        aria-describedby=""
        checked={false}
        className="form-check-input"
        id="optional"
        name="optional"
        onChange={[Function]}
        required={true}
        type="checkbox"
        value={false}
      />
      <p
        id="additionalFields"
        onClick={[Function]}
        role="presentation"
      >
        Support education research by providing additional information
      </p>
    </div>
    <button
      aria-disabled={false}
      aria-live="assertive"
      className="pgn__stateful-btn pgn__stateful-btn-state-default btn-primary submit mt-4 btn btn-primary"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      <span
        className="d-flex align-items-center justify-content-center"
      >
        Create Account
      </span>
    </button>
  </form>
</div>
`;

exports[`./RegistrationPage.js should match pending button state snapshot 1`] = `
<div
  className="register-container mx-auto"
>
  <div
    className="text-left"
  >
    <span>
      Already have an edX account?
    </span>
    <a
      href="/login"
    >
       Sign in.
    </a>
  </div>
  <form
    className="mb-4 mx-auto form-group"
  >
    <div
      className="form-group"
    >
      <label
        className="h6 pt-3"
        htmlFor="name"
      >
        Full Name (required)
      </label>
      <input
        aria-describedby=""
        className="form-control"
        id="name"
        name="name"
        onChange={[Function]}
        placeholder=""
        required={true}
        type="text"
        value=""
      />
      <strong
        className="invalid-feedback"
        id="name-invalid-feedback"
      >
        Enter your full name.
      </strong>
    </div>
    <div
      className="form-group"
    >
      <label
        className="h6 pt-3"
        htmlFor="username"
      >
        Public Username (required)
      </label>
      <input
        aria-describedby=""
        className="form-control"
        id="username"
        name="username"
        onChange={[Function]}
        placeholder=""
        required={true}
        type="text"
        value=""
      />
      <strong
        className="invalid-feedback"
        id="username-invalid-feedback"
      >
        Username must be between 2 and 30 characters long.
      </strong>
    </div>
    <div
      className="form-group"
    >
      <label
        className="h6 pt-3"
        htmlFor="email"
      >
        Email (required)
      </label>
      <input
        aria-describedby=""
        className="form-control"
        id="email"
        name="email"
        onChange={[Function]}
        placeholder=""
        required={true}
        type="email"
        value=""
      />
      <strong
        className="invalid-feedback"
        id="email-invalid-feedback"
      >
        Enter a valid email address that contains at least 3 characters.
      </strong>
    </div>
    <div
      className="form-group"
    >
      <label
        className="h6 pt-3"
        htmlFor="password"
      >
        Password (required)
      </label>
      <input
        aria-describedby=""
        className="form-control"
        id="password"
        name="password"
        onChange={[Function]}
        placeholder=""
        required={true}
        type="password"
        value=""
      />
      <strong
        className="invalid-feedback"
        id="password-invalid-feedback"
      >
        This password is too short. It must contain at least 8 characters. This password must contain at least 1 number.
      </strong>
    </div>
    <div
      className="form-group custom-control"
    >
      <input
        aria-describedby=""
        checked={false}
        className="form-check-input"
        id="optional"
        name="optional"
        onChange={[Function]}
        required={true}
        type="checkbox"
        value={false}
      />
      <p
        id="additionalFields"
        onClick={[Function]}
        role="presentation"
      >
        Support education research by providing additional information
      </p>
    </div>
    <button
      aria-disabled={true}
      aria-live="assertive"
      className="pgn__stateful-btn pgn__stateful-btn-state-pending btn-primary submit mt-4 disabled btn btn-primary"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      <span
        className="d-flex align-items-center justify-content-center"
      >
        <span
          className="pgn__stateful-btn-icon"
        >
          <span
            aria-hidden={true}
            className="icon fa fa-spinner fa-spin"
            id="Icon1"
          />
        </span>
        Create Account
      </span>
    </button>
  </form>
</div>
`;

exports[`./RegistrationPage.js should show error message on 409 1`] = `
<div
  className="register-container mx-auto"
>
  <div
    className="fade alert alert-danger show"
    role="alert"
  >
    <h4
      style={
        Object {
          "color": "#a0050e",
        }
      }
    >
      <span>
        We couldn't create your account.
      </span>
    </h4>
    <div>
      <ul>
        <li
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          It looks like test@gmail.com belongs to an existing account. Try again with a different email address.
        </li>
        <li
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          It looks like test belongs to an existing account. Try again with a different username.
        </li>
      </ul>
    </div>
  </div>
  <div
    className="text-left"
  >
    <span>
      Already have an edX account?
    </span>
    <a
      href="/login"
    >
       Sign in.
    </a>
  </div>
  <form
    className="mb-4 mx-auto form-group"
  >
    <div
      className="form-group"
    >
      <label
        className="h6 pt-3"
        htmlFor="name"
      >
        Full Name (required)
      </label>
      <input
        aria-describedby=""
        className="form-control"
        id="name"
        name="name"
        onChange={[Function]}
        placeholder=""
        required={true}
        type="text"
        value=""
      />
      <strong
        className="invalid-feedback"
        id="name-invalid-feedback"
      >
        Enter your full name.
      </strong>
    </div>
    <div
      className="form-group"
    >
      <label
        className="h6 pt-3"
        htmlFor="username"
      >
        Public Username (required)
      </label>
      <input
        aria-describedby=""
        className="form-control"
        id="username"
        name="username"
        onChange={[Function]}
        placeholder=""
        required={true}
        type="text"
        value=""
      />
      <strong
        className="invalid-feedback"
        id="username-invalid-feedback"
      >
        Username must be between 2 and 30 characters long.
      </strong>
    </div>
    <div
      className="form-group"
    >
      <label
        className="h6 pt-3"
        htmlFor="email"
      >
        Email (required)
      </label>
      <input
        aria-describedby=""
        className="form-control"
        id="email"
        name="email"
        onChange={[Function]}
        placeholder=""
        required={true}
        type="email"
        value=""
      />
      <strong
        className="invalid-feedback"
        id="email-invalid-feedback"
      >
        Enter a valid email address that contains at least 3 characters.
      </strong>
    </div>
    <div
      className="form-group"
    >
      <label
        className="h6 pt-3"
        htmlFor="password"
      >
        Password (required)
      </label>
      <input
        aria-describedby=""
        className="form-control"
        id="password"
        name="password"
        onChange={[Function]}
        placeholder=""
        required={true}
        type="password"
        value=""
      />
      <strong
        className="invalid-feedback"
        id="password-invalid-feedback"
      >
        This password is too short. It must contain at least 8 characters. This password must contain at least 1 number.
      </strong>
    </div>
    <div
      className="form-group custom-control"
    >
      <input
        aria-describedby=""
        checked={false}
        className="form-check-input"
        id="optional"
        name="optional"
        onChange={[Function]}
        required={true}
        type="checkbox"
        value={false}
      />
      <p
        id="additionalFields"
        onClick={[Function]}
        role="presentation"
      >
        Support education research by providing additional information
      </p>
    </div>
    <button
      aria-disabled={false}
      aria-live="assertive"
      className="pgn__stateful-btn pgn__stateful-btn-state-default btn-primary submit mt-4 btn btn-primary"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      <span
        className="d-flex align-items-center justify-content-center"
      >
        Create Account
      </span>
    </button>
  </form>
</div>
`;
